<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:id="@+id/title_ui"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ui"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />

    <Switch
        android:id="@+id/show_bar_tempo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_tempo_bar" />

    <TextView
        android:id="@+id/title_bar_tempo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:text="@string/bar_tempo_goutte_minutes"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_de_goutte" />

        <EditText
            android:id="@+id/show_tempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="2"
            android:inputType="number" />

    </LinearLayout>

    <Button
        android:id="@+id/finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish" />

</LinearLayout>